# reddit-sludge-scraper

./: .gitignore  README.md  gui.py  image_scroller.py  metadata_generator.py  narrarate.py  narraration.py  post_image_maker.py  pyproject.toml  scraper.py  sludge_video_extractor.py  video_maker.py  youtube_upload.py
narration/: README.md  pyproject.toml
narration/kokoro/: istftnet.py  modules.py
